--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Introduction to the DOM Lab</title>
+    <link rel="stylesheet" href="./style/style.css">
   </head>
   <body>
     <!--Copy the lesson's example code here-->
+    <div>Hello!</div>
+    <div>Goodbye!</div>
+
+    <script src="./script/script.js"></script>
   </body>
 </html>
